--- a/style.css
+++ b/style.css
@@ -6,6 +6,25 @@ body{
     background-color: var(--cor-de-fundo);
 }
 
-.cabeçalho-meu{
+.cabeçalho-menu{
     background-color: var(--fundo-menu);
+}
+
+.cabeçalho-menu{
+    display: block;
+    padding: 10px;
+    font-size: 24px;
+    text-decoration: none;
+    color: black;
+    text-align: center;
+    border-top: 1px solid;
+}
+.cabeçalho{ 
+    background-color: var(--cor-cabeçalho);
+}
+.cabeçalho-titulo{
+    font-size: 36px;
+    font-weight: 700;
+    padding: 12px;
+    text-align: center;
 }
